--- a/app/not-found.pug
+++ b/app/not-found.pug
@@ -5,14 +5,15 @@ html(lang='ru')
 	meta(name='viewport', content='width=device-width, user-scalable=yes')
 	link(href='./css/style.css', rel='stylesheet')
 	body
-		include modules/header.pug
-		.content
-			.content__row
-				.not-found
-					.not-found--pic
-						img(src='./img/not-found.png', width='363', height='139', alt='')
-					.not-found--message Похоже, такой страницы не существует
-					a.not-found--home(href='/') На главную
+		.wrapper
+			include modules/header.pug
+			.content
+				.content__row
+					.not-found
+						.not-found--pic
+							img(src='./img/not-found.png', width='363', height='139', alt='')
+						.not-found--message Похоже, такой страницы не существует
+						a.not-found--home(href='/') На главную
 		include modules/footer.pug
 		include modules/modals.pug
 		script(src='./js/libs.js')
